# VapourSynth-BM3DCUDA

./: CMakeLists.txt  COPYRIGHT  README.md
.github/workflows/: linux-arm64.yml  linux.yml  windows.yml
avs_source/: source.cpp
cpu_source/: CMakeLists.txt  bm3d_impl.hpp  cpuid.h  source.cpp  source_avs.cpp
hip_source/: CMakeLists.txt  kernel.hip.cpp  source.cpp
msvc/: BM3DCPU.vcxproj  BM3DCPU_AVS.vcxproj  BM3DCUDA.sln  BM3DCUDA.vcxproj  BM3DCUDA.vcxproj.filters  BM3DCUDA_AVS.vcxproj  BM3DCUDA_RTC.vcxproj  BM3D_VAggregate_AVS.vcxproj
rtc_source/: CMakeLists.txt  kernel.hpp  source.cpp
source/: CMakeLists.txt  kernel.cu  source.cpp  source_avs.cpp
sycl_source/: CMakeLists.txt  kernel.cpp  source.cpp
vaggregate/: CMakeLists.txt  source_avs.cpp
